[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/base/Space.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/ships/fighter01.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/missions/radartest2.gd" type="Script" id=3]
[ext_resource path="res://scenes/pilots/AiPilot.gd" type="Script" id=4]

[node name="Spatial" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="Ship" parent="." index="7" instance=ExtResource( 2 )]
transform = Transform( 0.625821, 0.679544, -0.382843, -0.579679, 0.733635, 0.354616, 0.521844, 0, 0.853041, 15.6774, -3.56697e-07, -13.0064 )

[node name="Pilot" type="Node" parent="Ship" index="12"]
script = ExtResource( 4 )

[node name="DebugInfo" type="Control" parent="." index="8"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DebugInfoContainer" type="VBoxContainer" parent="DebugInfo" index="0"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -47.0
margin_right = 47.0
margin_bottom = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YawContainer" type="HBoxContainer" parent="DebugInfo/DebugInfoContainer" index="0"]
margin_right = 94.0
margin_bottom = 14.0

[node name="Yaw" type="Label" parent="DebugInfo/DebugInfoContainer/YawContainer" index="0"]
margin_right = 14.0
margin_bottom = 14.0
text = "D:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YawValue" type="Label" parent="DebugInfo/DebugInfoContainer/YawContainer" index="1"]
margin_left = 18.0
margin_right = 18.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PitchContainer" type="HBoxContainer" parent="DebugInfo/DebugInfoContainer" index="1"]
margin_top = 18.0
margin_right = 94.0
margin_bottom = 32.0

[node name="Pitch" type="Label" parent="DebugInfo/DebugInfoContainer/PitchContainer" index="0"]
margin_right = 12.0
margin_bottom = 14.0
text = "X:"

[node name="PitchValue" type="Label" parent="DebugInfo/DebugInfoContainer/PitchContainer" index="1"]
margin_left = 16.0
margin_right = 16.0
margin_bottom = 14.0

[node name="RollContainer" type="HBoxContainer" parent="DebugInfo/DebugInfoContainer" index="2"]
margin_top = 36.0
margin_right = 94.0
margin_bottom = 50.0

[node name="Roll" type="Label" parent="DebugInfo/DebugInfoContainer/RollContainer" index="0"]
margin_right = 11.0
margin_bottom = 14.0
text = "Y:"

[node name="RollValue" type="Label" parent="DebugInfo/DebugInfoContainer/RollContainer" index="1"]
margin_left = 15.0
margin_right = 15.0
margin_bottom = 14.0
